@@ -1,6 +1,10 @@
 # Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
+AdjustAlleleFreq <- function(predAl, alleles2loc, minfreq) {
+    .Call('_polyRAD_AdjustAlleleFreq', PACKAGE = 'polyRAD', predAl, alleles2loc, minfreq)
+}
+
 BestGenos <- function(probs, ploidy, ntaxa, nalleles) {
     .Call('_polyRAD_BestGenos', PACKAGE = 'polyRAD', probs, ploidy, ntaxa, nalleles)
 }
