@@ -10,6 +10,9 @@ The Export_MAPpoly and Export_GWASpoly functions have been added.
 Bug fixes have been made in TestOverdispersion, VCF2RADdata, SubsetByLocus,
 and SubsetByTaxon.
 
+Some code in AddAlleleFreqByTaxa has been moved to Rcpp to speed computation
+time for IteratePopStruct and IteratePopStructLD.
+
 ## Changes in v1.0 ##
 
 Genotype likelihoods are now estimated under a beta-binomial distribution 
